<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">咪咕啦啦</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_price">PriceActivity</string>
    <string name="title_activity_subscribe">SubscribeActivity</string>
    <string name="title_activity_demo">咪咕咪咕</string>
    
    <string name="activity_demo_new_paytype">支付方式</string>
    <string name="activity_demo_new_name">名称：</string>
    <string name="activity_demo_new_namevalue">Small Text</string>
    <string name="activity_demo_new_price">价格：</string>
    <string name="activity_demo_new_pricevalue">Small Text</string>
    <string name="activity_demo_new_subscribe">开通会员</string>
    <string name="activity_demo_new_stopsubscribe">退订会员</string>
    <string name="activity_demo_new_mediaprogram">媒资信息查询接口</string>
    <string name="activity_demo_new_playbill">节目单查询接口</string>
    <string name="activity_demo_new_login">登录</string>
   

</resources>
