<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.cmvideo.activity.DemoActivity" >

    
    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="160dp"/>
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            
            <LinearLayout
        		android:id="@+id/payTypeLayout"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_margin="10dp"
        		android:layout_weight="0.3"
        		android:orientation="vertical" >

        		<TextView
            		android:id="@+id/payTypeTxt"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_margin="2dp"
            		android:text="@string/activity_demo_new_paytype" />

        		<RadioGroup
            		android:id="@+id/payTypeGroup"
            		android:layout_margin="2dp"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content">
		            <!--
		                 <RadioButton
		                android:id="@+id/alipayRadioBtn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:checked="true"
		                android:text="支付宝" />
		
		            <RadioButton
		                android:id="@+id/bossRadioBtn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="移动话费" />
		            -->
	        	</RadioGroup>
    		</LinearLayout>
    		
            <LinearLayout
		        android:id="@+id/payInfoLayout"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:orientation="vertical" >
		
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal" >
		
		            <TextView
		                android:id="@+id/nameTxt"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/activity_demo_new_name"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		
		            <TextView
		                android:id="@+id/nameValTxt"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/activity_demo_new_namevalue"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        </LinearLayout>
		
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal" >
		
		            <TextView
		                android:id="@+id/priceTxt"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/activity_demo_new_price"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		
		            <TextView
		                android:id="@+id/priceValTxt"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/activity_demo_new_pricevalue"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        </LinearLayout>
		
		    </LinearLayout>
		    
            
            
            
             <LinearLayout
		        android:id="@+id/subscribeLayout"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.2"
		        android:layout_margin="5dp"
		        android:orientation="vertical" >
		
		        <Button
		            android:id="@+id/subscribeBtn"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/activity_demo_new_subscribe" />
		        
		    </LinearLayout>
            
            
        </LinearLayout>
    </ScrollView>

    

    


   

</LinearLayout>